Base keepers pattern/word list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = [
+    "flit_core ~=3.2",
+    "bidict ~=0.19"
+]
 build-backend = "flit_core.buildapi"
 
 [project]
