--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     "flit_core ~=3.2",
-    "bidict ~=0.19"
+    "pyyaml ~=6.0"
 ]
 build-backend = "flit_core.buildapi"
 
